--- a/Tugas-React/project-reactjs/src/App.css
+++ b/Tugas-React/project-reactjs/src/App.css
@@ -1,20 +1,23 @@
 body {
   background-color: #f5f5f5;
   font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .container {
   background-color: white;
-  width: 300px;
+  /* width: 300px;
   margin: 50px auto;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  text-align: center;
+  text-align: center; */
 }
 
 .logo {
-  width: 300px;
+  width: 100%;
   margin-bottom: 20px;
 }
 
@@ -22,6 +25,7 @@ h1 {
   font-size: 20px;
   margin-bottom: 10px;
   text-align: left;
+  color: #333;
 }
 
 p {
@@ -58,13 +62,16 @@ hr {
   transition: background-color 0.3s ease;
 }
 
+.submit-button:hover {
+  background-color: #0056b3;
+}
+
 .submit-button.clicked {
   background-color: red;
 }
 
 .task-container {
   background-color: white;
-  /* width: 300px; */
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   text-align: center;
@@ -72,8 +79,6 @@ hr {
 
 .time-container {
   text-align: center;
-
-  /* margin-bottom: 20px; */
 }
 
 .App {
@@ -130,4 +135,103 @@ button {
 
 button:hover {
   background-color: #45a049;
+}
+
+.nav {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  background-color: #333;
+  justify-content: center;
+  margin: 0;
+  /* position: fixed; */
+  width: 100%;
+  top: 0;
+  z-index: 1000;
+}
+
+.nav li {
+  margin: 0 1rem;
+  padding: 1rem;
+}
+
+.nav li a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.nav li a:hover {
+  background-color: #575757;
+  padding: 1rem;
+  border-radius: 5px;
+}
+
+/* Styling untuk form input */
+.form input[type="text"],
+.form input[type="url"],
+.form input[type="number"],
+.form input[type="password"],
+.form input[type="email"],
+.form textarea {
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.form input[type="text"]:focus,
+.form input[type="url"]:focus,
+.form input[type="number"]:focus,
+.form input[type="password"]:focus,
+.form input[type="email"]:focus,
+.form textarea:focus {
+  border-color: #4CAF50;
+  box-shadow: 0 0 5px rgba(76, 175, 80, 0.5);
+  outline: none;
+}
+
+/* Styling untuk tabel */
+.book-list table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.book-list th, .book-list td {
+  padding: 10px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+.book-list tr:hover {
+  background-color: #f5f5f5;
+}
+
+/* Styling untuk tombol Edit dan Delete */
+.btn-edit {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-right: 5px;
+}
+
+.btn-edit:hover {
+  background-color: #45a049;
+}
+
+.btn-delete {
+  background-color: #f44336;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.btn-delete:hover {
+  background-color: #d32f2f;
 }
