--- a/Tugas-React/project-reactjs/src/TugasAxios/Books.css
+++ b/Tugas-React/project-reactjs/src/TugasAxios/Books.css
@@ -1,10 +1,9 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #121212;
-    color: #ffffff;
+    color: #000000;
     margin: 0;
     padding: 0;
-    display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
@@ -15,7 +14,7 @@ body {
     max-width: 600px; /* Adjusted to make the form wider */
     margin: 20px auto;
     padding: 40px;
-    background-color: #1e1e1e;
+    /* background-color: #1e1e1e; */
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     display: flex;
@@ -41,7 +40,7 @@ h1 {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    background-color: #2e2e2e;
+    /* background-color: #2e2e2e; */
     color: #ffffff;
     width: 100%;
 }
