--- a/Tugas-React/project-reactjs/src/TugasAxios/Books.css
+++ b/Tugas-React/project-reactjs/src/TugasAxios/Books.css
@@ -41,7 +41,7 @@ h1 {
     border: 1px solid #ccc;
     border-radius: 5px;
     /* background-color: #2e2e2e; */
-    color: #ffffff;
+    color: #000000;
     width: 100%;
 }
 
@@ -49,8 +49,8 @@ h1 {
     padding: 10px;
     border: none;
     border-radius: 5px;
-    background-color: #28a745;
-    color: #fff;
+    /* background-color: #28a745; */
+    color: #000000;
     cursor: pointer;
     transition: background-color 0.3s;
     width: 100%;
