--- a/fp-super-bootcamp-react/src/components/RestaurantList.css
+++ b/fp-super-bootcamp-react/src/components/RestaurantList.css
@@ -96,6 +96,16 @@ body {
     max-width: 600px;
     width: 100%;
     position: relative;
+    max-height: 80vh; /* Limit modal height */
+    overflow: hidden; /* Hide overflow by default */
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-scrollable-content {
+    overflow-y: auto; /* Enable vertical scrolling */
+    padding-right: 10px; /* Prevent scrollbar from overlapping content */
+    flex-grow: 1; /* Allow scrollable content to grow */
 }
 
 .modal-restaurant-image {
