--- a/fp-super-bootcamp-react/src/components/RestaurantList.css
+++ b/fp-super-bootcamp-react/src/components/RestaurantList.css
@@ -169,3 +169,18 @@ body {
 .close-button:hover {
     background-color: #cc5040;
 }
+
+
+
+.review-button {
+    margin-left: 10px;
+    background-color: blue;
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    cursor: pointer;
+}
+
+.review-button:hover {
+    background-color: darkblue;
+}
