--- a/fp-super-bootcamp-react/src/pages/Login.css
+++ b/fp-super-bootcamp-react/src/pages/Login.css
@@ -40,3 +40,11 @@
   color: red; /* Warna merah untuk pesan error */
   margin-top: 20px; /* Margin untuk memisahkan pesan error dari tombol */
 }
+.login-form textarea {
+  width: 100%; /* Full width */
+  padding: 10px;
+  margin-top: 10px;
+  border-radius: 5px;
+  border: 1px solid #ddd;
+  resize: none; /* Prevent resizing of textarea */
+}
